[project]
name = "er-aws-kms"
version = "0.1.0"
description = "ERv2 module for managing KMS keys"
authors = [{ name = "AppSRE", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = "~= 3.11.0"
dependencies = [
    "external-resources-io ~=0.4.0",
    "pydantic ~=2.10.0",
]

[project.urls]
homepage = "https://github.com/app-sre/er-aws-kms"
repository = "https://github.com/app-sre/er-aws-kms"
documentation = "https://github.com/app-sre/er-aws-kms"

[dependency-groups]
dev = [
    "ruff ==0.9.2",
    "mypy ~=1.13",
    "pytest ~=8.3.4",
    "pytest-cov ~=5.0.0",
]

[project.scripts]
generate-tf-config = 'er_aws_kms.config:generate_tf_files'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["er_aws_kms"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py311'
src = ["er_aws_kms"]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",    # Missing copyright header
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D211",   # No blank lines allowed before class docstring
    "D212",   # multi-line-summary-first-line
    "D213",   # multi-line-summary-second-line
    "D4",     # Doc string style
    "E501",   # Line too long
    "G004",   # Logging statement uses string formatting
    "S101",   # Use of assert detected. Pytest uses assert
    "EM101",
    "EM102",
    "TRY003",
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
    "ERA001"
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["er_aws_kms"]

# Mypy configuration
[tool.mypy]
files = ["er_aws_kms", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 50
